--- a/examples/docusaurus/mistral/docs/api/endpoint/batch/jobs.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/batch/jobs.mdx
@@ -4,7 +4,7 @@ sidebar_label: Batch Jobs
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, OperationResponseBodySection, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationRequestBodySection, Section, OperationParametersSection } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationResponseBodySection, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationRequestBodySection, Section, OperationParametersSection } from "@speakeasy-api/docs-md/react";
 
 
 # Batch Jobs Operations \{#batch/jobs\}
@@ -67,6 +67,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-jobs_api_routes_batch_get_batch_jobs+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -80,6 +82,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -639,6 +643,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-jobs_api_routes_batch_create_batch_job+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral, models
 
@@ -654,6 +660,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -1274,6 +1282,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-jobs_api_routes_batch_get_batch_job+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -1287,6 +1297,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -1791,6 +1803,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-jobs_api_routes_batch_cancel_batch_job+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -1804,6 +1818,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
