--- a/examples/docusaurus/mistral/docs/api/endpoint/beta/agents.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/beta/agents.mdx
@@ -4,7 +4,7 @@ sidebar_label: Beta Agents
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationParametersSection, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, OperationCodeSamplesSection, TabbedSection, TryItNow, SectionTab, OperationResponseBodySection, FrontMatterDisplayType, ExpandableBreakout, OperationRequestBodySection } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationParametersSection, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, OperationCodeSamplesSection, TabbedSection, TryItNow, SectionTab, CodeSample, OperationResponseBodySection, FrontMatterDisplayType, ExpandableBreakout, OperationRequestBodySection } from "@speakeasy-api/docs-md/react";
 
 
 # Beta Agents Operations \{#beta/agents\}
@@ -125,6 +125,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-agents_api_v1_agents_list+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -138,6 +140,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -1254,6 +1258,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-agents_api_v1_agents_create+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -1267,6 +1273,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -3301,6 +3309,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-agents_api_v1_agents_get+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -3314,6 +3324,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -4438,6 +4450,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-agents_api_v1_agents_update+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -4451,6 +4465,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -6502,6 +6518,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-agents_api_v1_agents_update_version+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -6515,6 +6533,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
