--- a/examples/docusaurus/mistral/docs/api/endpoint/classifiers.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/classifiers.mdx
@@ -4,7 +4,7 @@ sidebar_label: Classifiers
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, OperationRequestBodySection, Section, ExpandableSection, ExpandableProperty, OperationResponseBodySection, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationRequestBodySection, Section, ExpandableSection, ExpandableProperty, OperationResponseBodySection, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
 
 
 # Classifiers Operations \{#classifiers\}
@@ -71,6 +71,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-moderations_v1_moderations_post+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -87,6 +89,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -405,6 +409,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-chat_moderations_v1_chat_moderations_post+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral, models
 
@@ -440,6 +446,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -2184,6 +2192,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-classifications_v1_classifications_post+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -2199,6 +2209,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -2491,6 +2503,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-chat_classifications_v1_chat_classifications_post+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral, models
 
@@ -2529,6 +2543,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
