--- a/examples/docusaurus/mistral/docs/api/endpoint/embeddings.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/embeddings.mdx
@@ -4,7 +4,7 @@ sidebar_label: Embeddings
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, OperationRequestBodySection, Section, ExpandableSection, ExpandableProperty, OperationResponseBodySection, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationRequestBodySection, Section, ExpandableSection, ExpandableProperty, OperationResponseBodySection, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
 
 
 # Embeddings Operations \{#embeddings\}
@@ -73,6 +73,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-embeddings_v1_embeddings_post+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -89,6 +91,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
