--- a/examples/docusaurus/mistral/docs/api/endpoint/fine-tuning/jobs.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/fine-tuning/jobs.mdx
@@ -4,7 +4,7 @@ sidebar_label: Fine Tuning Jobs
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, OperationResponseBodySection, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationRequestBodySection, Section, FrontMatterDisplayType, OperationParametersSection } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationResponseBodySection, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationRequestBodySection, Section, FrontMatterDisplayType, OperationParametersSection } from "@speakeasy-api/docs-md/react";
 
 
 # Fine Tuning Jobs Operations \{#fine-tuning/jobs\}
@@ -67,6 +67,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -80,6 +82,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -1873,6 +1877,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -1888,6 +1894,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -4925,6 +4933,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -4938,6 +4948,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -7317,6 +7329,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -7330,6 +7344,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -9703,6 +9719,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -9716,6 +9734,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
