--- a/examples/docusaurus/mistral/docs/api/endpoint/ocr.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/ocr.mdx
@@ -4,7 +4,7 @@ sidebar_label: Ocr
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, OperationRequestBodySection, Section, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationResponseBodySection } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationRequestBodySection, Section, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationResponseBodySection } from "@speakeasy-api/docs-md/react";
 
 
 # Ocr Operations \{#ocr\}
@@ -73,6 +73,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-ocr_v1_ocr_post+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral, models
 
@@ -91,6 +93,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
