--- a/examples/docusaurus/mistral/docs/api/endpoint/agents.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/agents.mdx
@@ -4,7 +4,7 @@ sidebar_label: Agents
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, OperationRequestBodySection, Section, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationResponseBodySection, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationRequestBodySection, Section, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationResponseBodySection, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
 
 
 # Agents Operations \{#agents\}
@@ -73,6 +73,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-agents_completion_v1_agents_completions_post+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral, models
 
@@ -91,6 +93,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -3256,6 +3260,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-stream_agents+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral, models
 
@@ -3276,6 +3282,8 @@ with Mistral(
             # handle event
             print(event, flush=True)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
