--- a/examples/docusaurus/mistral/docs/api/endpoint/chat.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/chat.mdx
@@ -4,7 +4,7 @@ sidebar_label: Chat
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, OperationRequestBodySection, Section, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationResponseBodySection, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationRequestBodySection, Section, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationResponseBodySection, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
 
 
 # Chat Operations \{#chat\}
@@ -73,6 +73,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-chat_completion_v1_chat_completions_post+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral, models
 
@@ -91,6 +93,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -3325,6 +3329,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-stream_chat+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral, models
 
@@ -3345,6 +3351,8 @@ with Mistral(
             # handle event
             print(event, flush=True)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
