--- a/examples/docusaurus/mistral/docs/api/endpoint/files.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/files.mdx
@@ -4,7 +4,7 @@ sidebar_label: Files
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, OperationResponseBodySection, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationRequestBodySection, Section, OperationParametersSection, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationResponseBodySection, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationRequestBodySection, Section, OperationParametersSection, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
 
 
 # Files Operations \{#files\}
@@ -67,6 +67,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-files_api_routes_list_files+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -80,6 +82,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -484,6 +488,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-files_api_routes_upload_file+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -500,6 +506,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -969,6 +977,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-files_api_routes_retrieve_file+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -982,6 +992,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -1360,6 +1372,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-files_api_routes_delete_file+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -1373,6 +1387,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -1602,6 +1618,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-files_api_routes_download_file+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -1615,6 +1633,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -1780,6 +1800,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-files_api_routes_get_signed_url+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -1793,6 +1815,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
