--- a/examples/docusaurus/mistral/docs/api/endpoint/fim.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/fim.mdx
@@ -4,7 +4,7 @@ sidebar_label: Fim
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, OperationRequestBodySection, Section, ExpandableSection, ExpandableProperty, OperationResponseBodySection, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationRequestBodySection, Section, ExpandableSection, ExpandableProperty, OperationResponseBodySection, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
 
 
 # Fim Operations \{#fim\}
@@ -71,6 +71,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-fim_completion_v1_fim_completions_post+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -84,6 +86,8 @@ with Mistral(
     # Handle response
     print(res)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -1305,6 +1309,8 @@ Python
 
 <SectionContent slot="content" variant="top-level" id="operation-stream_fim+code-samples+python">
 
+<CodeSample>
+
 ```python
 from mistralai import Mistral
 
@@ -1320,6 +1326,8 @@ with Mistral(
             # handle event
             print(event, flush=True)
 ```
+
+</CodeSample>
 
 </SectionContent>
 
